--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@
     <div class="container">
         <!-- Cafe Header - Original Style -->
         <div class="cafe-header">
-<img src="logo.png" alt="Logo" style="width:400px; height:auto; display:block; margin:0 auto;">
+<img src="logo.jpeg" alt="Logo" style="width:400px; height:auto; display:block; margin:0 auto;">
             <div class="cafe-name">मारुती</div>
             <div class="cafe-subtitle">भोजनालय</div>
             <div class="location-info">
