--- a/index.html
+++ b/index.html
@@ -1208,6 +1208,15 @@
             </div>
         </div>
 
+
+<!-- Non-Veg Note -->
+<div class="nonveg-note">
+    🍗 Non-Veg Available on<br>
+    Wednesday, Friday & Saturday
+</div>
+
+       
+
         <!-- Main Menu -->
         <main class="menu">
             <div class="menu-head">
