--- a/index.html
+++ b/index.html
@@ -1422,14 +1422,14 @@
   { "id": 104, "cat": "स्पेशल थाळी / Special Thali", "name": "व्हेज पुलाव थाळी / VEG PULAO THALI", "price": "90 RS", "desc": "Veg pulao served with rassa and accompaniments", "tags": ["Veg", "Thali"], "img": "img/veg_pulao_thali.jpg" },
   { "id": 105, "cat": "स्पेशल थाळी / Special Thali", "name": "व्हेज थाळी / VEG THALI", "price": "70 RS", "desc": "Daily veg meal with bhaji, dal, and chapati", "tags": ["Veg", "Thali"], "img": "img/veg_thali_daily.jpg" },
   { "id": 106, "cat": "व्हेज / Veg", "name": "दाल / DAL", "price": "30 RS", "desc": "Plain tempered dal", "tags": ["Veg", "Dal"], "img": "img/dal_single.jpeg" },
-  { "id": 107, "cat": "व्हेज / Veg", "name": "भाजी / BHAJI", "price": "30 RS", "desc": "Daily vegetable preparation", "tags": ["Veg"], "img": "img/bhaji_single.jpeg" },
+  { "id": 107, "cat": "व्हेज / Veg", "name": "भाजी / BHAJI", "price": "30 RS", "desc": "Daily vegetable preparation", "tags": ["Veg"], "img": "img/bhaji_single1.jpeg" },
   { "id": 108, "cat": "व्हेज / Veg", "name": "स्पेशल भाजी / SPECIAL BHAJI", "price": "50 RS", "desc": "Premium vegetable preparation of the day", "tags": ["Veg", "Special"], "img": "img/special_bhaji.jpeg" },
   { "id": 109, "cat": "राईस स्पेशल / Rice Special", "name": "राईस / RICE", "price": "30 RS", "desc": "Steamed rice portion", "tags": ["Veg", "Rice"], "img": "img/rice_portion.jpeg" },
   { "id": 110, "cat": "चपाती स्पेशल / Chapati Special", "name": "चपाती / CHAPATI", "price": "7 RS", "desc": "Single soft wheat flatbread", "tags": ["Veg", "Roti"], "img": "img/chapati_7rs.jpeg" },
   { "id": 111, "cat": "नॉन-व्हेज / Non-Veg", "name": "फिश करी / FISH CURRY", "price": "", "desc": "Spicy traditional fish curry", "tags": ["Non-Veg", "Fish", "Wed-Fri-Sat Only"], "img": "img/fish_curry.jpeg" },
   { "id": 112, "cat": "नॉन-व्हेज / Non-Veg", "name": "फिश फ्राय / FISH FRY", "price": "", "desc": "Crispy fried fish with spices", "tags": ["Non-Veg", "Fish", "Wed-Fri-Sat Only"], "img": "img/fish_fry.jpg" },
   { "id": 113, "cat": "नॉन-व्हेज / Non-Veg", "name": "सुका जवळा / SUKHA JAWLA", "price": "60 RS", "desc": "Dry spiced small shrimp (Jawla)", "tags": ["Non-Veg", "Seafood", "Wed-Fri-Sat Only"], "img": "img/sukha_jawla.jpg" },
-  { "id": 114, "cat": "स्पेशल थाळी / Special Thali", "name": "सुका जवळा थाळी / SUKHA JAWLA THALI", "price": "", "desc": "Complete thali with dry jawla and curry", "tags": ["Non-Veg", "Seafood", "Thali", "Wed-Fri-Sat Only"], "img": "img/jawla_thali.jpeg" },
+  { "id": 114, "cat": "स्पेशल थाळी / Special Thali", "name": "सुका जवळा थाळी / SUKHA JAWLA THALI", "price": "", "desc": "Complete thali with dry jawla and curry", "tags": ["Non-Veg", "Seafood", "Thali", "Wed-Fri-Sat Only"], "img": "img/jawla_thali1.jpeg" },
   { "id": 115, "cat": "पुलाव / Pulav's", "name": "व्हेज पुलाव / VEG PULAV (FULL)", "price": "80 RS", "desc": "Aromatic vegetable pulao (Full)", "tags": ["Veg", "Pulav"], "img": "img/veg_pulav_full.jpeg" },
   { "id": 116, "cat": "पुलाव / Pulav's", "name": "व्हेज पुलाव / VEG PULAV (HALF)", "price": "60 RS", "desc": "Aromatic vegetable pulao (Half)", "tags": ["Veg", "Pulav"], "img": "img/veg_pulav_full.jpeg" },
 
