--- a/index.html
+++ b/index.html
@@ -1421,9 +1421,9 @@
   { "id": 103, "cat": "नॉन-व्हेज (अंडी) / Non-Veg (Egg)", "name": "अंडा मसाला (2 PC) / EGG MASALA (2 PC)", "price": "60 RS", "desc": "Double egg in spicy masala gravy", "tags": ["Non-Veg", "Egg", "Wed-Fri-Sat Only"], "img": "img/egg_masala_1pc.jpg" },
   { "id": 104, "cat": "स्पेशल थाळी / Special Thali", "name": "व्हेज पुलाव थाळी / VEG PULAO THALI", "price": "90 RS", "desc": "Veg pulao served with rassa and accompaniments", "tags": ["Veg", "Thali"], "img": "img/veg_pulao_thali.jpg" },
   { "id": 105, "cat": "स्पेशल थाळी / Special Thali", "name": "व्हेज थाळी / VEG THALI", "price": "70 RS", "desc": "Daily veg meal with bhaji, dal, and chapati", "tags": ["Veg", "Thali"], "img": "img/veg_thali_daily.jpg" },
-  { "id": 106, "cat": "व्हेज / Veg", "name": "दाल / DAL", "price": "30 RS", "desc": "Plain tempered dal", "tags": ["Veg", "Dal"], "img": "img/dal_single.jpeg" },
-  { "id": 107, "cat": "व्हेज / Veg", "name": "भाजी / BHAJI", "price": "50 RS", "desc": "Daily vegetable preparation", "tags": ["Veg"], "img": "img/bhaji_single1.jpeg" },
-  { "id": 108, "cat": "व्हेज / Veg", "name": "स्पेशल भाजी / SPECIAL BHAJI", "price": "50 RS", "desc": "Premium vegetable preparation of the day", "tags": ["Veg", "Special"], "img": "img/special_bhaji.jpeg" },
+  { "id": 106, "cat": "व्हेज / Veg", "name": "दाल राइस  / DAL rice ", "price": "50 RS", "desc": "Plain tempered dal", "tags": ["Veg", "Dal"], "img": "img/dal_single1.jpeg" },
+  { "id": 107, "cat": "व्हेज / Veg", "name": " रोटी भाजी  /  Roti BHAJI", "price": "50 RS", "desc": "Daily vegetable preparation", "tags": ["Veg"], "img": "img/bhaji_single1.jpeg" },
+  { "id": 108, "cat": "व्हेज / Veg", "name": "स्पेशल भाजी / SPECIAL BHAJI", "price": "30 RS", "desc": "Premium vegetable preparation of the day", "tags": ["Veg", "Special"], "img": "img/special_bhaji.jpeg" },
   { "id": 109, "cat": "राईस स्पेशल / Rice Special", "name": "राईस / RICE", "price": "30 RS", "desc": "Steamed rice portion", "tags": ["Veg", "Rice"], "img": "img/rice_portion.jpeg" },
   { "id": 110, "cat": "चपाती स्पेशल / Chapati Special", "name": "चपाती / CHAPATI", "price": "7 RS", "desc": "Single soft wheat flatbread", "tags": ["Veg", "Roti"], "img": "img/chapati_7rs.jpeg" },
   { "id": 111, "cat": "नॉन-व्हेज / Non-Veg", "name": "फिश करी / FISH CURRY", "price": "", "desc": "Spicy traditional fish curry", "tags": ["Non-Veg", "Fish", "Wed-Fri-Sat Only"], "img": "img/fish_curry.jpeg" },
